fixed liquibase error